# tiktok-bot

./: Cargo.toml  tiktok_discord.db
src/: db_sql.rs  main.rs
