[package]
name = "tiktok_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
regex = "1.10.4"
serenity = "0.12"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
